--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
         </repository>
+        <repository>
+            <id>eds-api-github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/NJDaeger/EnhancedDebugStick-api</url>
+        </repository>
     </repositories>
 
     <properties>
@@ -41,7 +46,7 @@
         <dependency>
             <groupId>com.njdaeger</groupId>
             <artifactId>eds-api</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
